force-app/main/default/objects/Services_Needed__c/Services_Needed__c.object-meta.xml
<CustomObject>
    <description>Services Needed holds available service information for the Customers</description>
    <label>Services Needed</label>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>Services Needed Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>