force-app/main/default/objects/Services_Needed__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>CASE(RecordType.Name,
    &apos;Grease Trap&apos;, &apos;BGT&apos;,
    &apos;Used Cooking Oil&apos;, &apos;UCO&apos;,
    &apos;Drain Cleaning&apos;, &apos;HYD&apos;,
    &apos;Interceptor&apos;, &apos;INT&apos;, 
     &apos;WR&apos;
) + &apos;-&apos; + Lead__r.Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>