force-app/main/default/objects/Services_Needed__c/fields/BGT_Before_After_Pics_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>BGT_Before_After_Pics_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before &amp; After Pics Reviewed</label>
    <type>Checkbox</type>
</CustomField>