force-app/main/default/objects/Services_Needed__c/fields/BGT_FOG_Report_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>BGT_FOG_Report_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOG Report Reviewed</label>
    <type>Checkbox</type>
</CustomField>