force-app/main/default/objects/Services_Needed__c/fields/Closes_At__c.field-meta.xml
<CustomField>
    <fullName>Closes_At__c</fullName>
    <description>Timings when Restaurant Closes</description>
    <label>Closes At</label>
    <type>Time</type>
</CustomField>