force-app/main/default/objects/Services_Needed__c/fields/Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preference__c</fullName>
    <description>Source from Account</description>
    <label>Communication Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dont_notify</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>sms</fullName>
            </value>
            <value>
                <fullName>both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>