force-app/main/default/objects/Services_Needed__c/fields/Current_Fill_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Fill_Level__c</fullName>
    <description>Used to identify the Gallons collected Container</description>
    <formula>IF(
    OR(
        ISBLANK(Last_Completed_Date__c),
        ISBLANK(Monthly_Gallons__c )
    ),
    0,
    MAX(
        0,
        ( Monthly_Gallons__c / 30) * (TODAY() - Last_Completed_Date__c)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fill Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>