force-app/main/default/objects/Services_Needed__c/fields/Daily_Fill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Fill_Rate__c</fullName>
    <description>Monthly Gallons divided by 30</description>
    <formula>Monthly_Gallons__c / 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Fill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>