force-app/main/default/objects/Services_Needed__c/fields/Door_Code__c.field-meta.xml
<CustomField>
    <fullName>Door_Code__c</fullName>
    <label>Door Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>