force-app/main/default/objects/Services_Needed__c/fields/Door_Key__c.field-meta.xml
<CustomField>
    <fullName>Door_Key__c</fullName>
    <label>Door Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>