force-app/main/default/objects/Services_Needed__c/fields/Employee_s_Arrive_At__c.field-meta.xml
<CustomField>
    <fullName>Employee_s_Arrive_At__c</fullName>
    <description>Employee Arrival Timings</description>
    <label>Employee&apos;s Arrive At</label>
    <type>Time</type>
</CustomField>