force-app/main/default/objects/Services_Needed__c/fields/Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Days__c</fullName>
    <label>Frequency Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>