force-app/main/default/objects/Services_Needed__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>From when service starts</description>
    <label>From</label>
    <type>Date</type>
</CustomField>