force-app/main/default/objects/Services_Needed__c/fields/GRD_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>GRD_Location_Name__c</fullName>
    <label>GRD Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>