force-app/main/default/objects/Services_Needed__c/fields/GRD_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>GRD_Serial_Number__c</fullName>
    <label>GRD Serial Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>