force-app/main/default/objects/Services_Needed__c/fields/Has_PO__c.field-meta.xml
<CustomField>
    <fullName>Has_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has PO</label>
    <type>Checkbox</type>
</CustomField>