force-app/main/default/objects/Services_Needed__c/fields/HazTrack_Sensor_ID__c.field-meta.xml
<CustomField>
    <fullName>HazTrack_Sensor_ID__c</fullName>
    <description>HazTrack Sensor ID for UCO Service</description>
    <externalId>true</externalId>
    <label>HazTrack Sensor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>