force-app/main/default/objects/Services_Needed__c/fields/HYD_Did_You_Ask__c.field-meta.xml
<CustomField>
    <fullName>HYD_Did_You_Ask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did You Ask</label>
    <type>Checkbox</type>
</CustomField>