force-app/main/default/objects/Services_Needed__c/fields/Indoor_Outdoor__c.field-meta.xml
<CustomField>
    <fullName>Indoor_Outdoor__c</fullName>
    <description>Used for UCO services to identify the container location</description>
    <label>Indoor/Outdoor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>