force-app/main/default/objects/Services_Needed__c/fields/Last_Collected_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Last_Collected_Gallons__c</fullName>
    <description>Last Collected Gallons from previous service</description>
    <label>Last Collected Gallons</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>