force-app/main/default/objects/Services_Needed__c/fields/Last_Completed__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed__c</fullName>
    <formula>Last_Completed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Completed / Serviced</label>
    <type>Date</type>
</CustomField>