force-app/main/default/objects/Services_Needed__c/fields/Monthly_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Gallons__c</fullName>
    <description>Used to get the Monthly Gallons usage for UCO Services</description>
    <label>Monthly Gallons</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>