force-app/main/default/objects/Services_Needed__c/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <description>Source from Account</description>
    <label>Notification Email</label>
    <type>Email</type>
</CustomField>