force-app/main/default/objects/Services_Needed__c/fields/Number_of_Fryers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Fryers__c</fullName>
    <label>Number of Fryers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>