force-app/main/default/objects/Services_Needed__c/fields/Oil_Change_Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>Oil_Change_Frequency_Days__c</fullName>
    <label>Oil Change Schedule (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>