force-app/main/default/objects/Services_Needed__c/fields/Opens_At__c.field-meta.xml
<CustomField>
    <fullName>Opens_At__c</fullName>
    <description>Timings when Restaurant Opens</description>
    <label>Opens At</label>
    <type>Time</type>
</CustomField>