force-app/main/default/objects/Services_Needed__c/fields/Previous_Provider__c.field-meta.xml
<CustomField>
    <fullName>Previous_Provider__c</fullName>
    <label>Previous Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baker</fullName>
            </value>
            <value>
                <fullName>Mahoney</fullName>
            </value>
            <value>
                <fullName>Oregon Oils</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>River City</fullName>
            </value>
            <value>
                <fullName>Scout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>