force-app/main/default/objects/Services_Needed__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Critical</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>M</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>