force-app/main/default/objects/Services_Needed__c/fields/Ready_To_Service_By__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Service_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>System stamp: user who marked Ready To Service</inlineHelpText>
    <label>Ready To Service By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ready_To_Service_By</relationshipName>
    <type>Lookup</type>
</CustomField>