force-app/main/default/objects/Services_Needed__c/fields/Ready_To_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Service_Date__c</fullName>
    <inlineHelpText>System stamp: date/time when marked Ready To Service</inlineHelpText>
    <label>Ready To Service Date</label>
    <type>DateTime</type>
</CustomField>