force-app/main/default/objects/Services_Needed__c/fields/Rebate__c.field-meta.xml
<CustomField>
    <fullName>Rebate__c</fullName>
    <description>To Capture Rebate for UCO Services</description>
    <label>Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>