force-app/main/default/objects/Services_Needed__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <formula>IF(
    OR(
        ISBLANK( Frequency_Days__c ),
        Frequency_Days__c = 0
    ),
    FALSE,
    TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>