force-app/main/default/objects/Services_Needed__c/fields/Service_Window_From__c.field-meta.xml
<CustomField>
    <fullName>Service_Window_From__c</fullName>
    <label>Service Window From</label>
    <type>Time</type>
</CustomField>