force-app/main/default/objects/Services_Needed__c/fields/Service_Window_To__c.field-meta.xml
<CustomField>
    <fullName>Service_Window_To__c</fullName>
    <label>Service Window To</label>
    <type>Time</type>
</CustomField>