force-app/main/default/objects/Services_Needed__c/fields/Serviceable_By__c.field-meta.xml
<CustomField>
    <fullName>Serviceable_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>System stamp: user who marked Serviceable</inlineHelpText>
    <label>Serviceable By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Serviceable_By</relationshipName>
    <type>Lookup</type>
</CustomField>