force-app/main/default/objects/Services_Needed__c/fields/Serviceable_Date__c.field-meta.xml
<CustomField>
    <fullName>Serviceable_Date__c</fullName>
    <inlineHelpText>System stamp: date/time when marked Serviceable</inlineHelpText>
    <label>Serviceable Date</label>
    <type>DateTime</type>
</CustomField>