force-app/main/default/objects/Services_Needed__c/fields/Services_Needed_Number_Display__c.field-meta.xml
<CustomField>
    <fullName>Services_Needed_Number_Display__c</fullName>
    <formula>HYPERLINK(
    &quot;/lightning/r/Services_Needed__c/&quot; &amp; Id &amp; &quot;/view&quot;,
    &quot;SN-&quot; &amp;
    CASE(
        RecordType.DeveloperName,
        &quot;Grease_Trap&quot;, &quot;IGT&quot;,
        &quot;Drain_Cleaning&quot;, &quot;HYD&quot;,
        &quot;Interceptor&quot;, &quot;EGT&quot;,
        &quot;Used_Cooking_Oil&quot;, &quot;UCO&quot;,
        &quot;Waste_Run&quot;,&quot;WR&quot;,
        &quot;&quot;
    )
    &amp; &quot;-&quot; &amp;
    RIGHT(Name, 4)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services Needed Number Display</label>
    <type>Text</type>
</CustomField>