force-app/main/default/objects/Services_Needed__c/fields/Size_Description__c.field-meta.xml
<CustomField>
    <fullName>Size_Description__c</fullName>
    <description>Size of the Product(Grease)</description>
    <label>Size/Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GB1</fullName>
            </value>
            <value>
                <fullName>GB2</fullName>
            </value>
            <value>
                <fullName>GB35</fullName>
            </value>
            <value>
                <fullName>GB50</fullName>
            </value>
            <value>
                <fullName>GB70</fullName>
            </value>
            <value>
                <fullName>GB250</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1500</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>2500</fullName>
            </value>
            <value>
                <fullName>3000</fullName>
            </value>
            <value>
                <fullName>5000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>