force-app/main/default/objects/Services_Needed__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <description>To when service ends</description>
    <label>To</label>
    <type>Date</type>
</CustomField>