force-app/main/default/objects/Services_Needed__c/fields/Total_Container_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Container_Capacity__c</fullName>
    <description>Sum of Total Capacity across all related containers.</description>
    <label>Total Container Capacity (GL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>