force-app/main/default/objects/Services_Needed__c/fields/Total_Container_Fill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Container_Fill_Rate__c</fullName>
    <description>Overall fill rate percentage across all site containers.</description>
    <formula>IF(Total_Container_Capacity__c &gt; 0, Total_Current_Container_Level__c / Total_Container_Capacity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Container Fill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>